--- a/app/src/main/res/layout/content_ofertalaboral.xml
+++ b/app/src/main/res/layout/content_ofertalaboral.xml
@@ -34,6 +34,12 @@
             android:text="New Text"
             android:id="@+id/precioHora" />
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            android:id="@+id/imageViewBandera"
+            android:layout_weight="0.14" />
+
     </LinearLayout>
 
 
